--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,11 +43,6 @@ h2 {
     padding-right: 20px;
     justify-content: center;
 }
-.logo {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-}
 nav {
     display: flex;
     flex-direction: row;
@@ -60,6 +55,13 @@ ul {
 li {
     display: inline-block;
 }
+
+.logo {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
 nav a {
     color: #191919;
     letter-spacing: 1px;
@@ -75,6 +77,16 @@ a:hover {
     transition-duration: 1s;
     color: #676078;
 }
+
+.burger {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    background-color: #191919;
+align-self: flex-end;
+display: none;
+}
+
 .hero {
     display: flex;
     flex-direction: row;
@@ -82,6 +94,7 @@ a:hover {
     background-color: #191919;
     align-items: center;
     justify-content: center;
+        align-self: stretch;
 }
 .hero1 {
     background-image: url(./../images/hero_1.png);
@@ -107,6 +120,17 @@ section {
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 5px;
+    flex-flow: row wrap;
+    max-width: 960px;
+}
+.responsive {
+    width: 100%;
+}
+main {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 .container {
     width: 80%;
@@ -118,15 +142,16 @@ section {
 }
 .column {
     padding: 5px;
-    float: left;
-    width: 33.333%;
-    text-align: center;
+        width: 33.333%;
+        text-align: center;
 }
 div.content {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 50px 80px;
+    width: 100%;
+
+    /*padding: 50px 80px;*/
 }
 aside {
     padding: 10px;
@@ -144,6 +169,9 @@ aside {
     text-transform: uppercase;
     /*text-align: center;*/
     /*vertical-align: middle;*/
+    width: 100%;
+align-self: baseline;
+padding: 10px;
 }
 
 /*.project_container{
@@ -203,7 +231,7 @@ p {
 }
 .column a:hover .p_title {
     transition-duration: 1s;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 /*DIGITAL WORK EXAMPLES*/
@@ -265,6 +293,7 @@ p {
 
 .digital_top {
     background-color: #191919;
+    align-self: stretch;
 }
 .section_title {
     font-size: 1.8em;
@@ -303,15 +332,62 @@ p {
 
 /*}*/
 
+.overlay {
+    background: rgba(0, 0, 0, 0.85);
+    opacity: 0;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.24s;
+    visibility: hidden;
+}
+
+.overlay-close {
+    position: absolute;
+    top: 32px;
+    right: 32px;
+    color: white;
+    font-size: 32px;
+}
+
+nav.overlay a {
+    color: white;
+    font-size: 40px;
+    padding: 16px 0;
+}
+
+.overlay--active {
+    opacity: 1;
+    visibility: visible;
+}
+
 @media screen and (max-width: 759px) {
     .responsive .column {
         width: 100%;
     }
 }
-@media screen and (max-width: 759px) {
+
+@media screen and (max-width: 900px) {
     nav {
         display: none;
     }
+
+    .logo {
+        flex: 1;
+        position: static;
+    }
+
+    .burger {
+        display: block;
+        /*flex-grow: 2 */
+    }
+
 }
 
 /*THIS IS ARTICLE RESPONSIVE STUFF*/
