--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,8 +357,8 @@ button {
 
 .overlay-close {
     position: absolute;
-    top: 10%;
-    right: 10%;
+    top: 58px;
+    right: 15px;
     color: white;
     /*font-size: 32px;*/
 }
