--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,23 +82,26 @@ a:hover {
     background-color: #191919;
     align-self: flex-end;
     display: none;
+    /*position: fixed;*/
 }
 .hero {
     display: flex;
     flex-direction: row;
+    align-self: stretch;
     height: 344px;
     background-color: #191919;
     align-items: center;
     justify-content: center;
-    align-self: stretch;
+    z-index: 1;
 }
+
+/*STICKY HERO */
 
 div.hero {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
 }
-
 .hero1 {
     background-image: url(./../images/hero_1.png);
     background-size: cover;
@@ -107,6 +110,18 @@ div.hero {
 .hero_title {
     color: #fff;
 }
+.teaser_container {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        background-color: red;
+/*background-image: url(./../images/tile.png);
+background-size: cover;*/
+z-index: 3;
+}
+
 .examples {
     width: 960px;
     display: flex;
@@ -126,6 +141,9 @@ section {
     padding-top: 5px;
     flex-flow: row wrap;
     max-width: 960px;
+    background-image: url(./../images/tile.png);
+    background-size: cover;
+    z-index: 2;
 }
 .responsive {
     width: 100%;
@@ -174,13 +192,12 @@ aside {
     /*text-align: center;*/
     /*vertical-align: middle;*/
     width: 100%;
-
     align-self: baseline;
     padding: 10px;
     border-bottom: 1px solid #f3f3f3;
     position: absolute;
-left: 0;
-bottom: 0;
+    left: 0;
+    bottom: 0;
 }
 
 /*.project_container{
@@ -386,7 +403,7 @@ nav.overlay a {
         width: 100%;
     }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 928px) {
     nav {
         display: none;
     }
